[package]
name = "egui-screensaver-matrix"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
description = "Matrix digital rain screensaver for egui, ported from Rezmason's WebGL original"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cecton/egui-screensaver-matrix"
homepage = "https://cecton.github.io/egui-screensaver-matrix"
documentation = "https://docs.rs/egui-screensaver-matrix"
keywords = ["egui", "screensaver", "matrix", "animation", "wasm"]
categories = ["gui", "graphics", "wasm", "visualization"]

[dependencies]
egui = { version = "0.35", default-features = false }
egui_glow = "0.35"
glow = "0.17"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
xtask-wasm = { version = "0.6.5", features = ["run-example", "wasm-opt"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
eframe = { version = "0.35", default-features = false, features = ["glow", "default_fonts", "web_screen_reader", "accesskit"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Location", "UrlSearchParams", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
eframe = { version = "0.35", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"] }

[workspace]
members = ["."]
resolver = "2"
